Added blog pic, blog boxes and top right article.

--- a/index.html
+++ b/index.html
@@ -33,24 +33,51 @@
         <div class="slideshow">
           <img id="panorama" src="panorama.png" alt="panorama">
         </div>
-        <div class="toprightarticle"></div>
+        <div class="toprightarticle">
+          <h2>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+            consectetur, adipisci velit..."</h2>
+          <p>Proin venenatis placerat sem quis vehicula. Nulla vitae elit fringilla,
+            hendrerit tortor at, elementum turpis. Pellentesque quis nulla nibh.
+            Cras luctus sit amet mauris in faucibus. Aliquam erat volutpat. Integer
+            tincidunt leo pellentesque, mattis augue in, auctor sapien. Vivamus
+            varius erat vel accumsan commodo. Quisque at tempus sem, quis pellentesque
+            urna. Phasellus vel est vel odio venenatis efficitur. Nunc luctus vehicula
+            magna, vel volutpat turpis pulvinar sed. Donec suscipit dapibus quam
+            et posuere.</p>
+          <p>Proin auctor aliquet velit in volutpat. In hac habitasse platea dictumst.
+            Ut euismod justo vel vulputate iaculis. Fusce gravida porttitor justo, sit
+            amet pulvinar leo condimentum ac. Etiam gravida vitae felis suscipit viverra.
+            Maecenas justo ipsum, posuere eu luctus eget, efficitur sed magna. Nam sed
+            facilisis quam. Quisque commodo velit nunc, quis porta enim lacinia ac.
+            Nullam sed nulla vitae orci sodales vulputate.</p>
+          </div>
     </div>
     <div class="largecontainer">
         <div class="leftarticle">
-          <h2>Newsletter</h2>
+          <h2>Newsletter - February 2017</h2>
+          <h2>The Mountain</h2>
+
+          <img id="mtn1" src="mtn1.png" alt="mtn1">
         </div>
         <div class="middlearticle"></div>
-        <div class="midtop"></div>
-        <div class="midbottom"></div>
+        <div class="blogtop">
+          <h2>From the Blog</h2>
+          <img id="blog" src="blog.png" alt="blog">
+          <div class="blogbody1"></div>
+        </div>
+        <div class="blogbottom">
+          <img id="blog" src="blog.png" alt="blog">
+          <div class="blogbody2"></div>
+        </div>
         <div class="signupbox">
           <h2>Sign Up</h2>
           <p>In vel blandit felis, nec sodales est. In hendrerit ligula.</p>
             <form>
                 <div class="name">
-                  <input type="text" placeholder="Name" required>
+                  <input type="text" placeholder="your name" required>
                 </div>
                 <div class="email">
-                  <input type="text" placeholder="email " required>
+                  <input type="text" placeholder="your email " required>
                 </div>
                 <div class="submit">
                   <input type="button" value="Submit">
