--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand narbar-left" href="javascript:void(0)">
-          <img class="img-repsonzive" height="50" alt="Brand" src="images/webLogo.png" </a>
-          <div class="navbar-right">
-          <div>
-          <a href="javascript:void(0)" class="navbar-link">Contact Us</a>
-          
-          <a href="javascript:void(0)" class="navbar-link">Log In</a>
+          <img class="img-repsonzive" height="50" alt="Brand" src="images/webLogo.png"> </a>
+        <div class="navbar-right">
+          <div class="header-links">
+            <a href="javascript:void(0)" class="nav-link">Contact Us</a>&nbsp; &nbsp;
+
+            <a href="javascript:void(0)" class="nav-link">Log In</a>
+
           </div>
-          <div>
+
+          <form class="navbar-form navbar-right">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default">Search</button>
-          </div>
-          </div>
+          </form>
+        </div>
       </div>
-    </div>
   </nav>
   <div class="panel panel-default">
     <div class="panel-body">
@@ -84,7 +85,7 @@
 
     </div>
     <div class="col-sm-6">
-      <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit, sed diam nonummy nibh euismod tincident.</h1>
+      <h4>Lorem ipsum dolor sit amet consectetuer adipiscing elit, sed diam nonummy nibh euismod tincident.</h4>
 
       <p>Lorem ipsum dolor sit amet, consetetuer adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere
         magna aliquam erat</p>
@@ -94,7 +95,7 @@
   <div class="row three-columns-container">
     <div class="col-sm-4 newsletter-container">
       <h1>Newsletter Title</h1>
-      <a href="=" javaascript:void(0)><img class="newsLetter_Img" src="images/newsletter.jpg"></a>
+      <a href="=" javaascript:void(0)><img class="newsLetter-Img" src="images/newsletter.jpg"></a>
       <p>Lorem ipsum dolor sit amet, consetetuer adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere
         magna aliquam erat... <a href="javascript:void(0)">Read More</a></p>
     </div>
@@ -102,8 +103,14 @@
       <h1>Blog Post Title</h1>
       <p>Januar 1, 2011 by <a href="javascript:void(0)">Huy</a></p>
       <p>
-        <a href="=" javaascript:void(0)><img class="newsLetter_Img" src="images/newsletter.jpg" align="left"></a>Lorem ipsum dolor sit amet, consetetuer
-        adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere magna aliquam erat... <a href="javascript:void(0)">Read More</a></p>
+        <a href="=" javaascript:void(0)><img class="blog-Img" src="images/newsletter.jpg" align="left"></a>Lorem ipsum dolor sit amet, consetetuer adipiscing
+        elit., sed diam noummy nibh euismod tincident ut loareet dolere magna aliquam erat... <a href="javascript:void(0)">Read More</a></p>
+        <hr/>
+      <h1>Blog Post Title</h1>
+      <p>Januar 1, 2011 by <a href="javascript:void(0)">Huy</a></p>
+      <p>
+        <a href="=" javaascript:void(0)><img class="blog-Img" src="images/newsletter.jpg" align="left"></a>Lorem ipsum dolor sit amet, consetetuer adipiscing
+        elit., sed diam noummy nibh euismod tincident ut loareet dolere magna aliquam erat... <a href="javascript:void(0)">Read More</a></p>
     </div>
     <div class="col-sm-4 sign-up-container">
       <h1>Sign Up</h1>
