--- a/index.html
+++ b/index.html
@@ -31,43 +31,80 @@
     </ul>
     <div class="outerbox">
         <div class="slideshow">
-          <img id="panorama" src="panorama.png" alt="panorama">
+          <img class="panorama" src="panorama.png" alt="panorama">
         </div>
         <div class="toprightarticle">
           <h2>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
             consectetur, adipisci velit..."</h2>
-          <p>Proin venenatis placerat sem quis vehicula. Nulla vitae elit fringilla,
-            hendrerit tortor at, elementum turpis. Pellentesque quis nulla nibh.
-            Cras luctus sit amet mauris in faucibus. Aliquam erat volutpat. Integer
-            tincidunt leo pellentesque, mattis augue in, auctor sapien. Vivamus
-            varius erat vel accumsan commodo. Quisque at tempus sem, quis pellentesque
-            urna. Phasellus vel est vel odio venenatis efficitur. Nunc luctus vehicula
-            magna, vel volutpat turpis pulvinar sed. Donec suscipit dapibus quam
-            et posuere.</p>
-          <p>Proin auctor aliquet velit in volutpat. In hac habitasse platea dictumst.
-            Ut euismod justo vel vulputate iaculis. Fusce gravida porttitor justo, sit
-            amet pulvinar leo condimentum ac. Etiam gravida vitae felis suscipit viverra.
-            Maecenas justo ipsum, posuere eu luctus eget, efficitur sed magna. Nam sed
-            facilisis quam. Quisque commodo velit nunc, quis porta enim lacinia ac.
-            Nullam sed nulla vitae orci sodales vulputate.</p>
-          </div>
+          <p>In ac leo sodales, bibendum ex ut, feugiat lorem. Phasellus elementum
+            faucibus est, a commodo massa placerat et. Phasellus porta quam eu metus
+            egestas, nec sollicitudin lectus pharetra. Maecenas tortor augue,
+            consectetur et porttitor scelerisque, faucibus quis purus. Nam sed dolor
+            eleifend, fermentum arcu elementum, pellentesque mauris.</p>
+          <p>Vestibulum gravida gravida eleifend. Donec rhoncus sed ante non rhoncus. Nulla quam felis,
+            condimentum nec consectetur sollicitudin, tincidunt at ex. Suspendisse
+            volutpat, ante et porttitor lacinia, nibh tellus malesuada quam, in semper
+            tortor nibh eu felis. Aliquam non risus rutrum, tristique augue ac, feugiat
+            sapien. Aliquam eget bibendum enim, ut pretium mi.</p>
+          <a class="readmore" href="#">Read More</a>
+
+        </div>
     </div>
     <div class="largecontainer">
         <div class="leftarticle">
           <h2>Newsletter - February 2017</h2>
           <h2>The Mountain</h2>
-
-          <img id="mtn1" src="mtn1.png" alt="mtn1">
+          <img class="mtn1" src="mtn1.png" alt="mtn1">
+          <p>Nunc augue velit, tempus sit amet sagittis id, porta at mauris. Cras
+            quis tempus quam. Nunc malesuada turpis nisl, quis accumsan nibh lobortis
+            vel. Sed facilisis vestibulum lorem, et imperdiet dui aliquam tincidunt.
+            Curabitur nec libero vitae nunc bibendum condimentum quis at urna. In
+            pharetra quam nisl, at euismod ante cursus non. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Suspendisse erat elit, efficitur ac
+            euismod laoreet, porta eu elit.</p>
+          <p>Donec scelerisque turpis velit, ut dictum nunc faucibus at. Morbi diam
+            nulla, elementum vitae sodales id, malesuada eu tortor. Proin nec porttitor
+            est. Quisque semper nunc ac magna scelerisque, ac ultricies risus tempus.
+            Aenean gravida nulla non mi blandit tincidunt. Suspendisse fringilla iaculis
+            lacus, vitae imperdiet dui faucibus vel. In volutpat orci ex, at mollis quam
+            iaculis et.</p>
+          <p>Nam blandit purus a magna sodales pharetra. Aenean ligula turpis, aliquam
+            eget velit eget, feugiat tristique tellus. Donec at urna vitae neque iaculis semper.
+            Integer sit amet quam sed sapien mollis convallis id a nisl. Duis venenatis ornare
+            dui vel porttitor.</p>
+          <a class="readmore" href="#">Read More</a>
         </div>
         <div class="middlearticle"></div>
         <div class="blogtop">
           <h2>From the Blog</h2>
-          <img id="blog" src="blog.png" alt="blog">
-          <div class="blogbody1"></div>
+          <h2>Mongo's Blog</h2>
+          <p class="date">February 23, 2017 by <a href="#">Mongo</a></p>
+          <img class="blog" src="blog.png" alt="blog">
+          <p class="blogbody1">Integer ac consequat dui, sit amet fringilla risus.
+            Nulla pharetra interdum risus, ac bibendum enim sollicitudin fermentum.
+            Maecenas vitae cursus orci. Fusce vel enim id sem convallis efficitur
+            venenatis sed ante. Cras interdum felis quis venenatis bibendum. Orci
+            varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+            mus. Proin mi tortor, sodales id dictum sit amet, tempus eu nisl. Nulla
+            vel venenatis libero, in sagittis ipsum. Ut volutpat lacus non orci fringilla,
+            nec consequat eros imperdiet. Nam nec felis ac elit pellentesque tincidunt
+            a et lorem.</p>
+          <a class="readmore" href="#">Read More</a>
         </div>
         <div class="blogbottom">
-          <img id="blog" src="blog.png" alt="blog">
-          <div class="blogbody2"></div>
+          <h2>Bob's Blog</h2>
+          <p class="date">February 23, 2017 by <a href="#">Bob</a></p>
+          <img class="blog" src="blog.png" alt="blog">
+          <p class="blogbody2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            vitae eros et tortor placerat varius. Phasellus porttitor tortor eros,
+            vitae porta quam viverra ac. Sed molestie feugiat egestas. Cras sed nisi
+            rutrum, venenatis lacus at, dignissim justo. Nam et auctor enim. Duis
+            in ultricies ante. Aenean varius lobortis mauris sed condimentum. Ut
+            odio lorem, aliquet ac ultrices et, efficitur id dolor. Praesent vitae
+            mollis nunc. Donec scelerisque quam quis pellentesque ullamcorper. Fusce
+            ut feugiat tortor, maximus dignissim enim. Aenean sed nisl lacinia,
+            sollicitudin lacus eu, laoreet lacus.</p>
+          <a class="readmore" href="#">Read More</a>
         </div>
         <div class="signupbox">
           <h2>Sign Up</h2>
