--- a/FirstAssignment BootStrap/index.html
+++ b/FirstAssignment BootStrap/index.html
@@ -1,87 +1,111 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Name of Site</title>
+    <title>Chicago Blackhawks</title>
     <script src="jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="css/Bootstrap-4/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/Bootstrap-4/css/bootstrap.min.css">
+    <script type="text/javascript" src="css/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-    
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+
 </head>
 
 <body>
-    <main>
-        <header class="container-fluid">
-            <div class="row">
-                <div class="col-3">
-                    <img src="css/images/Chicago_Blackhawks_Logo.png" alt="company logo" class="img-responsive">
-                </div>
-                <div class="col-6"></div>
-                <div class="col-3">
-                    <ul class="list-unstyled log-in">
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Log in</a></li>
-                    </ul>
-                    <form>
-                        <div class="searchBox">
-                            <input name="search" type="text" placeholder="" class="input">
-                            <input type="button" value="search">
-                        </div>
-
-                    </form>
-                </div>
-
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4 col-md-3 col-lg-3">
+                <a href="#"><img src="css/images/Chicago_Blackhawks_Logo.png" alt="company logo" class="img-responsive" height="100px" width="100px"></a>
             </div>
-        </header>
-        <ul class="nav navbar-inverse container-fluid">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Our Approach</a></li>
-            <li><a href="#">Our Work</a></li>
-            <li><a href="#">Clients</a></li>
-            <li><a href="#">Resources</a></li>
-        </ul>
+            <div class="col-sm-4 col-md-6 col-lg-6 well orb">CHICAGO BLACKHAWKS</div>
+            <div class="col-sm-4 col-md-3 col-lg-3 well2">
+                <ul class="list-unstyled log-in">
+                    <li class="contact-us">
+                        <button type="button" class="btn btn-danger contact orb">Contact Us</button>
+                    </li>
+                    <li class="log-in2">
+                        <button type="button" class="btn btn-danger orb">Log in</button>
+                    </li>
+                </ul>
+                <form>
+                    <div class="searchBox">
+                        <input name="search" type="text" placeholder="" class="input">
+                        <button type="button" class="btn btn-primary search-btn orb">Search</button>
+                    </div>
+
+                </form>
+            </div>
+
+        </div>
+    </header>
+    <nav class="nav navbar-inverse">
+        <div class="container-fluid">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav orb">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Our Approach</a></li>
+                    <li><a href="#">Our Work</a></li>
+                    <li><a href="#">Clients</a></li>
+                    <li><a href="#">Resources</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="wrap">
         <div class="container-fluid slider-container">
             <div class="row">
-<!-- Begin Carousel -->
-  <div id="carousel-example-generic" class="carousel slide col-8" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+                <!-- Begin Carousel -->
+                <div class="container col-xs-8">
+                    <br>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                            <li data-target="#myCarousel" data-slide-to="3"></li>
+                        </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carouselinner" role="listbox">
-    <div class="item active">
-      <img src="..." alt="...">
-      <div class="carousel-caption">
-        ...
-      </div>
-    </div>
-    <div class="item">
-      <img src="..." alt="...">
-      <div class="carousel-caption">
-        ...
-      </div>
-    </div>
-    ...
-  </div>
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="css/images/sliderImg1.jpg" alt="Chania" width="460" height="345">
+                            </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<!-- End Carousel -->
-                <p class="col-4 container slider-text">
+                            <div class="item">
+                                <img src="css/images/sliderImg2.jpg.jpg" alt="Chania" width="460" height="345">
+                            </div>
+
+                            <div class="item">
+                                <img src="css/images/sliderImg3.jpg.jpg" alt="Flower" width="460" height="345">
+                            </div>
+
+                            <div class="item">
+                                <img src="css/images/sliderImg4.jpg.jpg" alt="Flower" width="460" height="345">
+                            </div>
+                        </div>
+
+                        <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- End Carousel -->
+                <p class="col-4 container slider-text orb">
                     <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed.</strong>
                     <br>
                     <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare. Proin at posuere elit.
@@ -91,9 +115,9 @@
                 </p>
             </div>
         </div>
-        <div class="container-fluid clearfix">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 newsletter"><strong>Newsletter</strong> | February 2017
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 newsletter orb"><strong>Newsletter</strong> | February 2017
                     <br>
                     <h3>Newsletter Title</h3>
                     <img src="css/images/news.jpg" alt="picture" class="img-responsive" width="100%" height="auto">
@@ -103,43 +127,37 @@
                     </p>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 blog">
-                    <div class="media">
-                        <div class="media-head">
-                            <div class="media-body">
+                    <div>
+                        <div>
+                            <div>
                                 <strong>From the blog</strong>
                                 <br>
                                 <h3>Blog Post Title</h3>
                             </div>
-                            <div class="media-left">
-                                <img src="css/images/blog1.jpg" alt="smallpic" class="img-responsive" width="100px" height="80px"></div>
-
-                            <p class="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus...</p>
+                            <p class="top"><img src="css/images/blog1.jpg" alt="smallpic" class="img-responsive blog-img" width="100px" height="100px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus...</p>
                             <br>
                             <div><strong>From the blog</strong>
                                 <br>
                                 <h3>Blog Post Title</h3>
-                                <div class="media-left">
-                                    <img src="css/images/blog2.jpg" alt="smallpic" class="img-responsive" width="80px" height="80px">
-                                </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus...</p>
+                                <p><img src="css/images/blog2.jpg" alt="smallpic" class="img-responsive blog-img" width="80px" height="80px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus...</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sign-in"><strong>Sign Up</strong>
-                    <p class="signup">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sign-in orb"><strong>Sign Up</strong>
+                    <p class="signup orb">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <form>
                         <input name="search" type="text" placeholder="Your Name" class="input2">
                         <br>
                         <input name="search" type="text" placeholder="Your Email Address" class="input3">
                         <br>
-                        <input type="button" value="search" class="signin">
+                        <button type="button" class="btn btn-danger contact orb">Register</button>
                     </form>
                 </div>
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="col-12 orb">
         <p>&copy; 2017 Blackhawks | Chicago, IL | 555-555-5555</p>
         <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus.</p>
