Fixed padding in blog

--- a/FirstAssignment BootStrap/index.html
+++ b/FirstAssignment BootStrap/index.html
@@ -129,7 +129,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 blog">
                     <div>
                         <div>
-                            <div>
+                            <div class="blog-head">
                                 <strong>From the blog</strong>
                                 <br>
                                 <h3>Blog Post Title</h3>
