Updated the text and made a favicon just for fun. Also fixed image width and height values to exclude “px” and “auto” to abide by HTML5 standards.

--- a/FirstAssignment BootStrap/index.html
+++ b/FirstAssignment BootStrap/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicago Blackhawks</title>
+    <link rel="icon" href="css/images/Chicago_Blackhawks_Favicon.ico" type="image/icon">
     <script src="jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="css/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap-3.3.7-dist/css/bootstrap.css">
@@ -17,7 +18,7 @@
     <header class="container-fluid">
         <div class="row">
             <div class="col-sm-4 col-md-3 col-lg-3">
-                <a href="#"><img src="css/images/Chicago_Blackhawks_Logo.png" alt="company logo" class="img-responsive" height="100px" width="100px"></a>
+                <a href="#"><img src="css/images/Chicago_Blackhawks_Logo.png" alt="company logo" class="img-responsive" height="100" width="100"></a>
             </div>
             <div class="col-sm-4 col-md-6 col-lg-6 well orb">CHICAGO BLACKHAWKS</div>
             <div class="col-sm-4 col-md-3 col-lg-3 well2">
@@ -49,11 +50,13 @@
             </button>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav orb">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Our Approach</a></li>
-                    <li><a href="#">Our Work</a></li>
-                    <li><a href="#">Clients</a></li>
-                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Upcoming Games</a></li>
+                    <li><a href="#">Roster</a></li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li><a href="#">Shop</a></li>
                 </ul>
             </div>
         </div>
@@ -106,9 +109,9 @@
 
                 <!-- End Carousel -->
                 <p class="col-4 container slider-text orb">
-                    <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed.</strong>
+                    <strong>Modern Day All-Stars</strong>
                     <br>
-                    <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare. Proin at posuere elit.
+                    <br> Chicago is justifiably proud of the modern Blackhawks, but fans need not feel their passion is parochial. On Friday night of this All-Star weekend, it was announced that an international panel voted three current players on the team -- Jonathan Toews, Patrick Kane and Duncan Keith -- among the 100 greatest ever to perform in the National Hockey League.
                     <br>
                     <br>
                     <a href="#" id="link">Read More...</a>
@@ -119,9 +122,9 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 newsletter orb"><strong>Newsletter</strong> | February 2017
                     <br>
-                    <h3>Newsletter Title</h3>
-                    <img src="css/images/news.jpg" alt="picture" class="img-responsive" width="100%" height="auto">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare...
+                    <h3>Chicago Wins Again</h3>
+                    <img src="css/images/news.jpg" alt="picture" class="img-responsive" width="400">
+                    <p class="news-text">After nearly half a century, the Stanley Cup again belongs to Chicago. The Blackhawks brought it home for themselves and their fans -- both long-suffering and those who jumped on board during a remarkable resurgence that began just three seasons ago -- when they defeated the Flyers 4-3 in overtime Wednesday night at a raucous Wachovia Center.
                         <br>
                         <br> <a href="#" id="newslink">Read More...</a>
                     </p>
@@ -130,22 +133,23 @@
                     <div>
                         <div>
                             <div class="blog-head">
-                                <strong>From the blog</strong>
+                                <strong>Bloghawks</strong>
                                 <br>
-                                <h3>Blog Post Title</h3>
+                                <h3>Blackhaws take on Glass</h3>
                             </div>
-                            <p class="top"><img src="css/images/blog1.jpg" alt="smallpic" class="img-responsive blog-img" width="100px" height="100px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus...</p>
+                            <p class="top"><img src="css/images/blog1.jpg" alt="smallpic" class="img-responsive blog-img" width="100" height="100">Glass shows a 5-4-1 record to go with a 2.38 goals-against average and .917 save percentage in 10 games with the American Hockey League's Rockford IceHogs this season. The 31-year-old posted a shutout in his debut with Rockford on Jan. 18, 2017, and added his second blanking of the season with a 37-save performance on Feb. 15 against the Cleveland Monsters.</p>
                             <br>
-                            <div><strong>From the blog</strong>
+                            <div><strong>Bloghawks</strong>
                                 <br>
-                                <h3>Blog Post Title</h3>
-                                <p><img src="css/images/blog2.jpg" alt="smallpic" class="img-responsive blog-img" width="80px" height="80px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus. Mauris condimentum et felis ac ornare. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus...</p>
+                                <h3>Blackhawks recall Kero and Schmaltz</h3>
+                                <p><img src="css/images/blog2.jpg" alt="smallpic" class="img-responsive blog-img" width="80" height="80">The Chicago Blackhawks announced today that they have recalled forwards Tanner Kero and Nick Schmaltz from the American Hockey League's Rockford IceHogs. Kero, 24, has four markers and four helpers in 22 games with the Blackhawks this season. He also shares fifth on the IceHogs with 20 points (7G, 13A) this year.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sign-in orb"><strong>Sign Up</strong>
-                    <p class="signup orb">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sign-in orb">
+                    <h3>Sign Up</h3>
+                    <h4 class="signup orb news-text">Sign Up for our newsletter to get the latest updates about the Chicago Blackhawks and recieve coupons for merchandise and tickets!</h4>
                     <form>
                         <input name="search" type="text" placeholder="Your Name" class="input2">
                         <br>
@@ -160,7 +164,7 @@
     <footer class="col-12 orb">
         <p>&copy; 2017 Blackhawks | Chicago, IL | 555-555-5555</p>
         <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus sem mi, non pulvinar lorem porta sed. Donec feugiat risus ut mi aliquet, a gravida felis pulvinar. Phasellus sit amet varius metus.</p>
+        <p>Made by Erik Rodriguez</p>
     </footer>
 </body>
 
